--- a/css/style.css
+++ b/css/style.css
@@ -1038,12 +1038,13 @@ input[type="text"] {
 
 #map {
   width: 100%;
-  height: 500px;
-  position: relative;
+  height: 100px;
+  position: center;
 }
 @media screen and (max-width: 768px) {
   #map {
     height: 200px;
+    position: center;
   }
 }
 
