--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-cover {
   background-color: transparent;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: initial;
   position: relative;
   height: 600px;
   width: 100%;
