--- a/css/style.css
+++ b/css/style.css
@@ -1279,4 +1279,11 @@ input[type="text"] {
   opacity: 0;
 }
 
+.csu {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 /*# sourceMappingURL=style.css.map */
